# GoJVM

./: CMakeLists.txt  JvmInterface.cpp  JvmInterface.h  main.cpp
